--- a/src/components/Contact/Contact.astro
+++ b/src/components/Contact/Contact.astro
@@ -14,7 +14,7 @@ interface Props {
 
 const { class: className } = Astro.props as Props;
 
-import ringsImage from "@assets/images/rings-min.jpg";
+import ringsImage from "@assets/images/about-us.png";
 ---
 
 <section
@@ -26,8 +26,8 @@ import ringsImage from "@assets/images/rings-min.jpg";
 	<div class="grid gap-y-10 md:grid-cols-2">
 		<div class="border-primary-300 pt-8 md:border-r md:pr-20 md:pl-12">
 			<p class="description text-lg">
-				Have questions or are you ready to get a quote? I am here to help! Fill out the form and I
-				will get back to you in 1-2 business days. Let's capture your love story together.
+				We are a company focusing on providing a wide range of photography services to enterprises.We take good care of the image and deliver high-quality standard service to help you perform better and more efficiently on your Business.
+Our mission is to work together with you to build professional and classic corporate image, which will contribute positively to your business growth.
 			</p>
 			<div class="mx-auto mt-8 aspect-square overflow-hidden">
 				<Image
@@ -44,3 +44,9 @@ import ringsImage from "@assets/images/rings-min.jpg";
 		</div>
 	</div>
 </section>
+
+<style>
+	.description {
+		text-align: justify;
+	}
+</style>
