--- a/src/components/Hero/Hero.astro
+++ b/src/components/Hero/Hero.astro
@@ -44,28 +44,31 @@ const headerImgMobile = "https://cdn.heixifu.com/home-page/hero-bg-mobile.jpg";
 	</div>
 
 	<!-- hero items -->
-	<div class="site-container relative w-full gap-10 py-44 text-center md:py-52 md:text-left">
+	<div class="site-container relative w-full py-0 text-center md:py-0 md:text-center translate-y-[60%]">
 		<!-- Hero text -->
-		<div class="text-base-50 my-auto mr-auto max-w-[800px] flex-col">
+		<div class="text-base-50 my-auto mr-auto flex-col">
 			<h1
-				class="font-heading-1 text-4xl font-semibold text-pretty drop-shadow-[0_2px_2px_rgba(0,0,0,0.4)] md:text-7xl md:leading-tight"
+				class="font-heading-1 text-5xl text-pretty drop-shadow-[0_2px_2px_rgba(0,0,0,0.4)] md:text-8xl"
 			>
-				Everything You Need is Already Inside
+				Everything You Need is
+			</h1>
+			<h1
+				class="font-heading-1 text-5xl text-pretty drop-shadow-[0_2px_2px_rgba(0,0,0,0.4)] md:text-8xl"
+			>
+				Already Inside
 			</h1>
 			<p
-				class="mt-8 text-lg tracking-widest text-pretty drop-shadow-[0_1px_1px_rgba(0,0,0,0.2)] md:max-w-[550px] md:text-2xl"
+				class="mt-5 text-lg tracking-widest text-pretty drop-shadow-[0_1px_1px_rgba(0,0,0,0.2)] md:text-2xl"
 			>
-				Transform your wedding moments into lasting memories amidst California's majestic
-				landscapes.
+				Find Your Greatness
 			</p>
-			<div class="mt-10 flex flex-wrap justify-center gap-4 md:justify-start">
+			<div class="mt-5 flex flex-wrap justify-center gap-4 md:justify-center">
 				<Button
 					variant="ghost"
-					arrow="right"
 					href="/#contact"
-					class="pl-0 text-xl text-white drop-shadow-[0_1px_1px_rgba(0,0,0,0.2)] md:text-3xl"
+					class="pl-40 pr-40 pt-5 pb-5 text-xl text-white underline drop-shadow-[0_1px_1px_rgba(0,0,0,0.2)] md:text-3xl border text-center"
 				>
-					Get a Quote
+					PORTRAITS
 				</Button>
 			</div>
 		</div>
