--- a/src/components/Hero/Hero.astro
+++ b/src/components/Hero/Hero.astro
@@ -44,11 +44,11 @@ const headerImgMobile = "https://cdn.heixifu.com/home-page/hero-bg-mobile.jpg";
 	</div>
 
 	<!-- hero items -->
-	<div class="site-container relative w-full py-0 text-center md:py-0 md:text-center translate-y-[60%]">
+	<div class="relative w-full py-0 text-center md:py-0 md:text-center translate-y-[60%]">
 		<!-- Hero text -->
 		<div class="text-base-50 my-auto mr-auto flex-col">
 			<h1
-				class="font-heading-1 text-5xl text-pretty drop-shadow-[0_2px_2px_rgba(0,0,0,0.4)] md:text-8xl"
+				class="font-heading-1 text-5xl text-pretty drop-shadow-[0_2px_2px_rgba(0,0,0,0.4)] md:text-9xl lg:text-[11rem]"
 			>
 				Everything You Need is
 			</h1>
