--- a/src/components/Hero/Hero.astro
+++ b/src/components/Hero/Hero.astro
@@ -10,37 +10,53 @@ import { Image } from "astro:assets";
 import Button from "@components/Button/Button.astro";
 
 // images
-import heroImage from "@images/hero-bg-min.jpg";
-import heroImageMobile from "@images/hero-bg-min.jpg";
-
 const headerImg = "https://cdn.heixifu.com/home-page/hero-bg.webp";
 const headerImgMobile = "https://cdn.heixifu.com/home-page/hero-bg-mobile.jpg";
+
+const firstImg = "https://cdn.heixifu.com/home-page/001.jpg";
+const secondImg = "https://cdn.heixifu.com/home-page/002.png";
+const thirdImg = "https://cdn.heixifu.com/home-page/003.jpg";
 
 ---
 
 <section id="hero" class="relative z-10 flex min-h-[100lvh] w-full">
 	<!-- background image -->
-	<div class="absolute -z-10 h-full min-h-full w-full overflow-hidden">
-		<div class="absolute inset-0 bg-black/10"></div>
-
-		<Image
-			src={headerImg}
-			class="hidden h-auto min-h-full w-full object-cover object-bottom sm:block"
-			alt="wedding"
-			aria-hidden="true"
-			loading="eager"
-			inferSize={true}
-			height={1400}
-		/>
-		<Image
-			src={headerImgMobile}
-			class="h-auto min-h-full w-full object-cover sm:hidden"
-			alt="wedding"
-			aria-hidden="true"
-			loading="eager"
-			inferSize={true}
-			width={1200}
-		/>
+	<div class="absolute -z-10 h-full min-h-full w-full bg-black overflow-hidden">
+		<div class="flex flex-row h-full min-h-full w-full object-cover object-bottom">
+			<div class="h-full min-h-full w-1/3 object-cover overflow-hidden">
+				<Image
+				src={firstImg}
+				class="h-full w-auto object-cover transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-1000"
+				alt="wedding"
+				aria-hidden="true"
+				loading="eager"
+				inferSize={true}
+				height={1400}
+				/>
+			</div>
+			<div class="h-full min-h-full w-1/3 object-cover overflow-hidden">
+				<Image
+				src={secondImg}
+				class="h-full w-auto object-cover transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-1000"
+				alt="wedding"
+				aria-hidden="true"
+				loading="eager"
+				inferSize={true}
+				height={1400}
+				/>
+			</div>
+			<div class="h-full min-h-full w-1/3 object-cover overflow-hidden">
+				<Image
+				src={thirdImg}
+				class="h-full w-auto object-cover transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-1000"
+				alt="wedding"
+				aria-hidden="true"
+				loading="eager"
+				inferSize={true}
+				height={1400}
+				/>
+			</div>
+		</div>
 	</div>
 
 	<!-- hero items -->
@@ -48,17 +64,17 @@ const headerImgMobile = "https://cdn.heixifu.com/home-page/hero-bg-mobile.jpg";
 		<!-- Hero text -->
 		<div class="text-base-50 my-auto mr-auto flex-col">
 			<h1
-				class="font-heading-1 text-5xl text-pretty drop-shadow-[0_2px_2px_rgba(0,0,0,0.4)] sm:text-5xl md:text-7xl lg:text-8xl xl:text-[7rem] 2xl:text-[9rem]"
+				class="font-heading-1 text-5xl text-pretty drop-shadow-[0_2px_2px_rgba(0,0,0,0.4)] sm:text-5xl md:text-7xl lg:text-8xl xl:text-[7rem] 2xl:text-[10rem]"
 			>
 				Everything You Need is
 			</h1>
 			<h1
-				class="font-heading-1 text-5xl text-pretty drop-shadow-[0_2px_2px_rgba(0,0,0,0.4)] sm:text-5xl md:text-7xl lg:text-8xl xl:text-[7rem] 2xl:text-[9rem]"
+				class="font-heading-1 text-5xl text-pretty drop-shadow-[0_2px_2px_rgba(0,0,0,0.4)] sm:text-5xl md:text-7xl lg:text-8xl xl:text-[7rem] 2xl:text-[10rem]"
 			>
 				Already Inside
 			</h1>
 			<p
-				class="mt-5 text-lg tracking-widest text-pretty drop-shadow-[0_1px_1px_rgba(0,0,0,0.2)] md:text-2xl"
+				class="mt-5 text-lg tracking-widest text-pretty drop-shadow-[0_1px_1px_rgba(0,0,0,0.2)] md:text-3xl"
 			>
 				Find Your Greatness
 			</p>
@@ -66,7 +82,7 @@ const headerImgMobile = "https://cdn.heixifu.com/home-page/hero-bg-mobile.jpg";
 				<Button
 					variant="ghost"
 					href="/#contact"
-					class="pl-40 pr-40 pt-5 pb-5 text-xl text-white underline drop-shadow-[0_1px_1px_rgba(0,0,0,0.2)] md:text-3xl border text-center"
+					class="pl-40 pr-40 pt-5 pb-5 text-xl text-white underline drop-shadow-[0_1px_1px_rgba(0,0,0,0.2)] md:text-3xl border text-center transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300"
 				>
 					PORTRAITS
 				</Button>
