--- a/src/components/Contact/Contact.astro
+++ b/src/components/Contact/Contact.astro
@@ -32,7 +32,7 @@ Our mission is to work together with you to build professional and classic corpo
 			<div class="mx-auto mt-8 aspect-square overflow-hidden">
 				<Image
 					src={ringsImage}
-					alt="wedding rings"
+					alt="BLACK SUIT"
 					width={450}
 					densities={[1.5, 2]}
 					class="h-full w-full object-cover"
