--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -21,24 +21,18 @@ const today = new Date();
 				<SiteLogo />
 			</div>
 			<div class="col-span-2 flex justify-end gap-4">
-				<FooterLink href="/">Home</FooterLink>
-				<FooterLink href="/#portfolio">Portfolio</FooterLink>
+				<FooterLink href="/">PORTRAITS</FooterLink>
+				<FooterLink href="/">VIDEOS</FooterLink>
+				<FooterLink href="/">ADVERTISING</FooterLink>
 			</div>
 			<div class="hidden justify-center text-center md:flex">
 				<SiteLogo />
 			</div>
 			<div class="flex gap-4 md:col-span-2">
-				<FooterLink href="/#pricing">Pricing</FooterLink>
-				<FooterLink href="/#contact">Contact</FooterLink>
+				<FooterLink href="/">PRODUCTS</FooterLink>
+				<FooterLink href="/">BY PHONE</FooterLink>
+				<FooterLink href="/">ABOUT US</FooterLink>
 			</div>
-		</div>
-
-		<!-- lets connect -->
-		<div class="description mx-auto mt-6 max-w-[21rem] px-4 text-center">
-			<p>
-				<span class="italic">Lets connect!</span> Follow my accounts to view more wedding photography
-				and get inspired for your wedding.
-			</p>
 		</div>
 
 		<!-- socials -->
