--- a/src/components/Forms/ContactForm.astro
+++ b/src/components/Forms/ContactForm.astro
@@ -3,7 +3,7 @@
 import Button from "@components/Button/Button.astro";
 ---
 
-<form id="contact-form" name="contact form" class="flex h-full flex-col justify-between gap-4">
+<form id="contact-form" name="contact form" netlify class="flex h-full flex-col justify-between gap-4">
 	<input type="hidden" name="form-name" value="contact" />
 	<div>
 		<label for="contact-name" class="font-heading-1 text-lg uppercase">Your Name</label>
