--- a/src/components/Nav/Nav.astro
+++ b/src/components/Nav/Nav.astro
@@ -25,17 +25,17 @@ const { startStyle = "default", rest } = Astro.props as Props;
 	{...rest}
 >
 	<div class="mx-auto flex w-full" class:list={[{ "text-base-900": startStyle === "default" }]}>
-		<div class="site-container flex h-16 w-full items-center">
+		<div class="flex h-16 w-full items-center">
 			<header class="flex w-full items-center gap-2">
 				<!-- home button / image -->
-				<div class="flex flex-auto justify-start">
+				<div class="flex flex-auto justify-start ml-7">
 					<SiteLogo />
 				</div>
 
 				<!-- desktop nav menu -->
 				<div class="flex flex-auto justify-end lg:gap-4">
 					<nav class="hidden md:block">
-						<ul class="flex h-full items-center justify-center px-4 text-lg lg:gap-4">
+						<ul class="flex h-full items-center justify-center px-3 text-lg lg:gap-4">
 							{
 								// if dropdown exists, setup the dropdown, otherwise it is just a link
 								navData.map((navItem) =>
@@ -50,15 +50,6 @@ const { startStyle = "default", rest } = Astro.props as Props;
 							}
 						</ul>
 					</nav>
-					<Button
-						variant="secondary"
-						class=`nav__cta py-1 my-auto hidden md:block ${startStyle === "white" ? "data-[scrolled=true]:border-primary-200 data-[scrolled=true]:hover:border-primary-200/80" : "border-primary-200"}`
-						href="https://cosmicthemes.com/themes/horizon/"
-						data-scrolled="false"
-					>
-						Get Horizon
-					</Button>
-
 					<!-- mobile nav menu, only load on small screens where it is visible -->
 					<div class="md:hidden">
 						<MobileNav />
