--- a/src/components/Nav/Nav.astro
+++ b/src/components/Nav/Nav.astro
@@ -35,7 +35,7 @@ const { startStyle = "default", rest } = Astro.props as Props;
 				<!-- desktop nav menu -->
 				<div class="flex flex-auto justify-end lg:gap-4">
 					<nav class="hidden md:block">
-						<ul class="flex h-full items-center justify-center px-3 text-lg lg:gap-4">
+						<ul class="flex h-full items-center justify-center px-3 text-2xl lg:gap-2 font-semibold">
 							{
 								// if dropdown exists, setup the dropdown, otherwise it is just a link
 								navData.map((navItem) =>
