--- a/src/components/Hero/Hero.astro
+++ b/src/components/Hero/Hero.astro
@@ -22,7 +22,7 @@ const thirdImg = "https://cdn.heixifu.com/home-page/003.jpg";
 			<div class="h-full min-h-full w-1/3 object-cover overflow-hidden">
 				<Image
 				src={firstImg}
-				class="h-full w-auto object-cover transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-1000"
+				class="heroImg h-full w-auto object-cover transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-1000"
 				alt="wedding"
 				aria-hidden="true"
 				loading="eager"
@@ -33,7 +33,7 @@ const thirdImg = "https://cdn.heixifu.com/home-page/003.jpg";
 			<div class="h-full min-h-full w-1/3 object-cover overflow-hidden">
 				<Image
 				src={secondImg}
-				class="h-full w-auto object-cover transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-1000"
+				class="heroImg h-full w-auto object-cover transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-1000"
 				alt="wedding"
 				aria-hidden="true"
 				loading="eager"
@@ -44,7 +44,7 @@ const thirdImg = "https://cdn.heixifu.com/home-page/003.jpg";
 			<div class="h-full min-h-full w-1/3 object-cover overflow-hidden">
 				<Image
 				src={thirdImg}
-				class="h-full w-auto object-cover transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-1000"
+				class="heroImg h-full w-auto object-cover transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-1000"
 				alt="wedding"
 				aria-hidden="true"
 				loading="eager"
@@ -86,3 +86,12 @@ const thirdImg = "https://cdn.heixifu.com/home-page/003.jpg";
 		</div>
 	</div>
 </section>
+
+<script>
+	const heroImgs = document.getElementsByClassName("heroImg");
+	for (var i = 0; i < heroImgs.length; i++) {
+		heroImgs[i].addEventListener("contextmenu", function (event) {
+			event.preventDefault();
+		});
+	}
+</script>
