--- a/src/components/Nav/Nav.astro
+++ b/src/components/Nav/Nav.astro
@@ -28,14 +28,14 @@ const { startStyle = "default", rest } = Astro.props as Props;
 		<div class="flex h-16 w-full items-center">
 			<header class="flex w-full items-center gap-2">
 				<!-- home button / image -->
-				<div class="flex flex-auto justify-start ml-7">
+				<div class="flex flex-auto justify-start ml-15">
 					<SiteLogo />
 				</div>
 
 				<!-- desktop nav menu -->
 				<div class="flex flex-auto justify-end lg:gap-4">
 					<nav class="hidden md:block">
-						<ul class="flex h-full items-center justify-center px-3 text-2xl lg:gap-2 font-semibold">
+						<ul class="flex h-full items-center justify-center px-3 text-xl lg:gap-2 font-semibold">
 							{
 								// if dropdown exists, setup the dropdown, otherwise it is just a link
 								navData.map((navItem) =>
