--- a/src/layouts/BaseHead.astro
+++ b/src/layouts/BaseHead.astro
@@ -22,11 +22,17 @@ import WorkSansVariable from "@fontsource-variable/work-sans/files/work-sans-lat
 import RalewayVariable from "@fontsource-variable/raleway/files/raleway-latin-wght-normal.woff2";
 import PlayfairDisplayVariable from "@fontsource-variable/playfair-display/files/playfair-display-latin-wght-normal.woff2";
 import CinzelDecorative from "@fontsource/cinzel-decorative/files/cinzel-decorative-latin-400-normal.woff2";
+import JQuery from "@components/ExternalScripts/JQuery.astro";
+import ImagesLoaded from "@components/ExternalScripts/ImagesLoaded.astro";
+import MasonryLayout from "@components/ExternalScripts/MasonryLayout.astro";
 ---
 
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width" , initial-scale="1.0" />
 
+<JQuery />
+<ImagesLoaded />
+<MasonryLayout />
 <!-- local font preload for better performance when not using ClientRouter -->
 <link rel="preload" href={WorkSansVariable} as="font" type="font/woff2" crossorigin="anonymous" />
 <link rel="preload" href={RalewayVariable} as="font" type="font/woff2" crossorigin="anonymous" />
