--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -21,7 +21,7 @@ const today = new Date();
 				<SiteLogo />
 			</div>
 			<div class="col-span-2 flex justify-end gap-4">
-				<FooterLink href="/">PORTRAITS</FooterLink>
+				<FooterLink href="/portraits">PORTRAITS</FooterLink>
 				<FooterLink href="/">VIDEOS</FooterLink>
 				<FooterLink href="/">ADVERTISING</FooterLink>
 			</div>
