--- a/src/pages/portraits/index.astro
+++ b/src/pages/portraits/index.astro
@@ -91,7 +91,7 @@ const photos = [
 </style>
 
 <BaseLayout
-	title="Portraits"
+	title="BLACK SUIT | PORTRAITS"
 	description="Capturing the essence of visionary leaders through powerful, professional portraits."
 	navStartStyle="default"
 >
@@ -128,7 +128,7 @@ const photos = [
 
 	.masonry-grid-sizer,
 	.masonry-grid-item {
-		width: 24%;
+		width: 24.9%;
 		margin: 1px;
 	}
 
