--- a/src/components/Hero/Hero.astro
+++ b/src/components/Hero/Hero.astro
@@ -77,7 +77,7 @@ const thirdImg = "https://cdn.heixifu.com/home-page/003.jpg";
 			<div class="mt-5 flex flex-wrap justify-center gap-4 md:justify-center">
 				<Button
 					variant="ghost"
-					href="/#contact"
+					href="/portraits"
 					class="pl-40 pr-40 pt-5 pb-5 text-xl text-white underline drop-shadow-[0_1px_1px_rgba(0,0,0,0.2)] md:text-3xl border text-center transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300"
 				>
 					PORTRAITS
