--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -85,3 +85,14 @@
 		@apply rotate-180;
 	}
 }
+
+#body {
+	overflow-x: hidden;
+	overflow-y: auto;
+	-ms-overflow-style: none;
+	scrollbar-width: none;
+}
+
+#body::-webkit-scrollbar {
+	display: none;
+}
