Change the Masonry lib

--- a/src/components/ExternalScripts/MasonryLayout.astro
+++ b/src/components/ExternalScripts/MasonryLayout.astro
@@ -1,1 +1,1 @@
-<script is:inline src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+<script is:inline src="/scripts/masonry.pkgd.min.js"></script>
