--- a/src/components/Hero/HeroVideo.astro
+++ b/src/components/Hero/HeroVideo.astro
@@ -7,7 +7,7 @@ const heroVideo = "https://cdn.heixifu.com/home-page/V001.MP4";
 ---
 
 <section id="heroVideo" class="relative z-10 flex min-h-[100lvh] w-full">
-    <video id="heroVideoControl" src={heroVideo} loop="loop" autoplay="autoplay" muted="muted" playsinline="playsinline" controlslist="nodownload nofullscreen noremoteplayback"></video>
+    <video id="heroVideoControl" src={heroVideo} loop="loop" autoplay="autoplay" muted="muted" playsinline="playsinline" controls controlslist="nodownload"></video>
 </section>
 
 <script>
