--- a/src/components/Hero/Hero.astro
+++ b/src/components/Hero/Hero.astro
@@ -60,17 +60,17 @@ const thirdImg = "https://cdn.heixifu.com/home-page/003.jpg";
 		<!-- Hero text -->
 		<div class="text-base-50 my-auto mr-auto flex-col">
 			<h1
-				class="font-heading-1 text-5xl text-pretty drop-shadow-[0_2px_2px_rgba(0,0,0,0.4)] sm:text-5xl md:text-7xl lg:text-8xl xl:text-[7rem] 2xl:text-[10rem]"
+				class="select-none font-heading-1 text-5xl text-pretty drop-shadow-[0_2px_2px_rgba(0,0,0,0.4)] sm:text-5xl md:text-7xl lg:text-8xl xl:text-[7rem] 2xl:text-[10rem]"
 			>
 				Everything You Need is
 			</h1>
 			<h1
-				class="font-heading-1 text-5xl text-pretty drop-shadow-[0_2px_2px_rgba(0,0,0,0.4)] sm:text-5xl md:text-7xl lg:text-8xl xl:text-[7rem] 2xl:text-[10rem]"
+				class="select-none font-heading-1 text-5xl text-pretty drop-shadow-[0_2px_2px_rgba(0,0,0,0.4)] sm:text-5xl md:text-7xl lg:text-8xl xl:text-[7rem] 2xl:text-[10rem]"
 			>
 				Already Inside
 			</h1>
 			<p
-				class="mt-5 text-lg tracking-widest text-pretty drop-shadow-[0_1px_1px_rgba(0,0,0,0.2)] md:text-3xl"
+				class="select-none mt-5 text-lg tracking-widest text-pretty drop-shadow-[0_1px_1px_rgba(0,0,0,0.2)] md:text-3xl"
 			>
 				Find Your Greatness
 			</p>
