Add another video to the homepage

--- a/src/components/Hero/HeroVideo.astro
+++ b/src/components/Hero/HeroVideo.astro
@@ -1,13 +1,11 @@
 ---
 
-import { CldVideoPlayer } from 'astro-cloudinary';
-
-const heroVideo = "https://cdn.heixifu.com/home-page/V001.MP4";
+const { videoUrl } = Astro.props;
 
 ---
 
 <section id="heroVideo" class="relative z-10 flex min-h-[100lvh] w-full">
-    <video id="heroVideoControl" src={heroVideo} loop="loop" autoplay="autoplay" muted="muted" playsinline="playsinline" controls controlslist="nodownload"></video>
+    <video id="heroVideoControl" src={videoUrl} loop="loop" autoplay="autoplay" muted="muted" playsinline="playsinline" controls controlslist="nodownload"></video>
 </section>
 
 <script>
