--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,10 +24,11 @@ import siteData from "@config/siteData.json";
 
 <BaseLayout title={siteData.title} description={siteData.description} navStartStyle="white">
 	<Hero />
-	<HeroVideo />
+	<HeroVideo videoUrl="https://cdn.heixifu.com/home-page/V001.MP4" />
 	<HeroSingleImage id="thirdOne" imageUrl="https://cdn.heixifu.com/home-page/004.jpg" />
 	<HeroDoubleImage />
 	<HeroSingleImage id="fifthOne" imageUrl="https://cdn.heixifu.com/home-page/007.jpg" />
+	<HeroVideo videoUrl="https://cdn.heixifu.com/home-page/V002.mp4" />
 
 	<Contact />
 </BaseLayout>
