ajust home page margin

--- a/src/components/Hero/Hero.astro
+++ b/src/components/Hero/Hero.astro
@@ -15,7 +15,7 @@ const thirdImg = "https://cdn.heixifu.com/home-page/003.jpg";
 
 ---
 
-<section id="hero" class="relative z-10 flex min-h-[100lvh] w-full">
+<section id="hero" class="relative z-10 flex min-h-[100lvh] w-full mb-3">
 	<!-- background image -->
 	<div class="absolute -z-10 h-full min-h-full w-full bg-black overflow-hidden">
 		<div class="flex flex-row h-full min-h-full w-full object-cover object-bottom">
