--- a/src/components/Hero/HeroDoubleImage.astro
+++ b/src/components/Hero/HeroDoubleImage.astro
@@ -5,7 +5,7 @@ const firstImg = "https://cdn.heixifu.com/home-page/008.png";
 const secondImg = "https://cdn.heixifu.com/home-page/006.png";
 ---
 
-<section id="heroDouble" class="relative z-10 flex min-h-[45lvh] w-full">
+<section id="heroDouble" class="relative z-10 flex min-h-[45lvh] w-full my-3">
 	<!-- background image -->
 	<div class="absolute -z-10 h-full min-h-full w-full overflow-hidden bg-black">
 		<div class="flex h-full min-h-full w-full flex-row object-cover object-bottom">
