--- a/src/components/Hero/HeroVideo.astro
+++ b/src/components/Hero/HeroVideo.astro
@@ -4,7 +4,7 @@ const { videoUrl } = Astro.props;
 
 ---
 
-<section id="heroVideo" class="relative z-10 flex min-h-[100lvh] w-full">
+<section id="heroVideo" class="relative z-10 flex min-h-[100lvh] w-full my-3">
     <video id="heroVideoControl" src={videoUrl} loop="loop" autoplay="autoplay" muted="muted" playsinline="playsinline" controls controlslist="nodownload"></video>
 </section>
 
