--- a/src/components/Hero/HeroSingleImage.astro
+++ b/src/components/Hero/HeroSingleImage.astro
@@ -4,7 +4,7 @@ import { Image } from "astro:assets";
 const { id, imageUrl } = Astro.props;
 ---
 
-<section id={id} class="relative z-10 flex min-h-[100lvh] w-full">
+<section id={id} class="relative z-10 flex min-h-[100lvh] w-full my-3">
 	<!-- background image -->
 	<div class="absolute -z-10 h-full min-h-full w-full overflow-hidden">
 		<Image
