首页、肖像页问题修复
首页头部均分三份、肖像瀑布流问题修复

--- a/src/components/Hero/Hero.astro
+++ b/src/components/Hero/Hero.astro
@@ -22,7 +22,7 @@ const thirdImg = "https://cdn.heixifu.com/home-page/003.jpg";
 			<div class="h-full min-h-full w-1/3 object-cover overflow-hidden">
 				<Image
 				src={firstImg}
-				class="heroImg h-full w-auto object-cover transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-101 duration-1000"
+				class="heroImg h-full w-full object-cover transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-101 duration-1000"
 				alt="wedding"
 				aria-hidden="true"
 				loading="eager"
@@ -33,7 +33,7 @@ const thirdImg = "https://cdn.heixifu.com/home-page/003.jpg";
 			<div class="h-full min-h-full w-1/3 object-cover overflow-hidden">
 				<Image
 				src={secondImg}
-				class="heroImg h-full w-auto object-cover transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-101 duration-1000"
+				class="heroImg h-full w-full object-cover transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-101 duration-1000"
 				alt="wedding"
 				aria-hidden="true"
 				loading="eager"
@@ -44,7 +44,7 @@ const thirdImg = "https://cdn.heixifu.com/home-page/003.jpg";
 			<div class="h-full min-h-full w-1/3 object-cover overflow-hidden">
 				<Image
 				src={thirdImg}
-				class="heroImg h-full w-auto object-cover transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-101 duration-1000"
+				class="heroImg h-full w-full object-cover transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-101 duration-1000"
 				alt="wedding"
 				aria-hidden="true"
 				loading="eager"
