--- a/src/pages/portraits/index.astro
+++ b/src/pages/portraits/index.astro
@@ -97,7 +97,7 @@ const photos = [
 >
 	<section id="portraits" class="mt-20">
 		<div class="masonry-grid">
-			<div class="masonry-grid-sizer"></div>
+			<div class="masonry-grid-sizer"/>
 			{
 				photos.map((photo) => (
 					<div class="masonry-grid-item">
