--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -11,7 +11,21 @@ import siteData from "@config/siteData.json";
 const today = new Date();
 ---
 
-<footer class="bg-base-100/40 mt-12 flex flex-col items-center justify-center py-8">
+<footer class="bg-base-100/40 mt-12 w-full flex flex-col items-center justify-center">
+	<div class="w-full mx-auto">
+      <!-- 右上角文字 -->
+      <div class="flex justify-end mb-4 mr-15">
+        <SiteLogo />
+      </div>
+      
+      <!-- 分割线 -->
+      <div class="w-full h-px bg-gray-800 my-4"></div>
+      
+      <!-- 左下角文字 -->
+      <div class="flex justify-start mt-4 ml-15">
+        <p class="text-sm text-black">© BLACK SUIT PHOTOGRAPH</p>
+      </div>
+    </div>
 	<div class="site-container">
 		<!-- footer links -->
 		<div
