--- a/src/components/Nav/Nav.astro
+++ b/src/components/Nav/Nav.astro
@@ -33,7 +33,7 @@ const { startStyle = "default", rest } = Astro.props as Props;
 				</div>
 
 				<!-- desktop nav menu -->
-				<div class="flex flex-auto justify-end lg:gap-4">
+				<div class="flex flex-auto justify-end lg:gap-4 mr-10">
 					<nav class="hidden md:block">
 						<ul class="flex h-full items-center justify-center px-3 text-xl lg:gap-2 font-semibold">
 							{
